--- a/phpWearableCode/index.html
+++ b/phpWearableCode/index.html
@@ -24,6 +24,12 @@ body{
 	margin-top: 4em;
 }
 
+#iconWearable{
+    width: 6em;
+    height: 6em;
+    margin-left: 0em;
+}
+
 </style>
 
 
@@ -54,6 +60,11 @@ body{
              <h2>
             <p>Οr sign in with codeBank wearable</p>
              </h2>
+              <div class="row">
+                    <div class="col-sm-6 col-md-4 col-md-offset-4" >
+                        <img src="wearable.jpg" id="iconWearable" />
+                    </div>
+            </div>
 
 
 
