--- a/phpWearableCode/index.html
+++ b/phpWearableCode/index.html
@@ -13,6 +13,9 @@
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+
 <title>CodeBank</title>
 <style >
 body{
@@ -47,9 +50,9 @@ body{
                 <br>
                 <br>
                 <form class="form-signin">
-                <input type="text" class="form-control" placeholder="username" required autofocus>
-                <input type="password" class="form-control" placeholder="Password" required>
-                <button class="btn btn-lg btn-primary btn-block" type="submit">
+                <input type="text" class="form-control" id="username" placeholder="username" required autofocus>
+                <input type="password" class="form-control" id="password" placeholder="Password" required>
+                <button class="btn btn-lg btn-primary btn-block" type="submit" id="singIn">
                     Sign in</button>
                
                 <a href="#" class="pull-right need-help">Need help? </a><span class="clearfix"></span>
@@ -74,5 +77,18 @@ body{
     </div>
 </div>
 </body>
+
+<script >
+
+$("#singIn").click(function(){
+    var user=$("#username").text();
+    var password=$("#password").text();
+    alert(user );
+    alert( password);
+
+});
+
+
+</script>
 
 </html>
