--- a/phpWearableCode/success.html
+++ b/phpWearableCode/success.html
@@ -12,9 +12,9 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 
 <!-- Latest compiled and minified JavaScript -->
-<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
+<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
 
 <title>CodeBank</title>
 <style >
@@ -46,27 +46,7 @@ body{
         <div class="col-sm-6 col-md-4 col-md-offset-4" id="panelLogin">
             <h1 class="text-center login-title">CodeBank</h1>
             <div class="account-wall">
-                <br>
-                <br>
-                <br>
-                <form method="POST" class="form-signin" action="ReadArduinoTextWithPhp.php">
-                <input class="form-control" id="username" name="username" placeholder="username" required autofocus>
-                <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
-                <button class="btn btn-lg btn-primary btn-block" type="submit" id="signIn">
-                    Sign in</button>
-               
-                <a href="#" class="pull-right need-help">Need help? </a><span class="clearfix"></span>
-                </form>
-            </div>
-            <a href="#" class="text-center new-account">Create an account </a>
-             <br>
-             <h2>
-            <p>Οr sign in with codeBank wearable</p>
-             </h2>
-              <div class="row">
-                    <div class="col-sm-6 col-md-4 col-md-offset-4" >
-                        <img src="wearable.jpg" id="iconWearable" />
-                    </div>
+                <h2>Successfull Login!</h2>
             </div>
 
 
@@ -80,10 +60,12 @@ body{
 
 <script >
 
-$("#signIn").click(function() {
-    var user=$("#username").val();
-    var password=$("#password").val();
-    alert(user + ' ' + password );
+$("#singIn").click(function(){
+    var user=$("#username").text();
+    var password=$("#password").text();
+    alert(user );
+    alert( password);
+
 });
 
 
