--- a/phpWearableCode/index.html
+++ b/phpWearableCode/index.html
@@ -79,11 +79,29 @@ body{
 </body>
 
 <script >
+$(function() {
+    var url = $('.form-signin').attr('action');
+    var receivedSuccess = false;
+    (function worker() {
+        if (receivedSuccess) {
+            return;
+        }
+      $.ajax({
+        url: url, 
+        success: function(data) {
+            console.log(data);
+            if (data.trim() === 'success') {
+                receivedSuccess = true;
+                alert('Successful Login');
+            }
+        },
+        complete: function() {
+          // Schedule the next request when the current one's complete
+          setTimeout(worker, 5000);
+        }
+      });
+    })();
 
-$("#signIn").click(function() {
-    var user=$("#username").val();
-    var password=$("#password").val();
-    alert(user + ' ' + password );
 });
 
 
